[package]
name = "feedbacker-api"
version = "0.1.0"
authors = ["x4nt <addisonshaw93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.1.17"
postgres = "0.15"
serde = "1.0.94"
serde_derive = "1.0.94"
bcrypt = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rawsql = "0.1.0"